--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,7 +6,7 @@
 <div class=" mr-10 ml-10 text-primary-foreground min-h-screen flex flex-col items-center justify-center p-4">
     <!--    <img class="w-24 h-24 mb-4" src="https://placehold.co/150?text=📅" alt="planner-icon" />-->
     <main class="text-center container mx-auto pr-6 pl-6">
-        <h1 class=" text-4xl font-extrabold mb-4 text-black">About Us</h1>
+        <h1 class=" text-4xl mb-4 text-black">About Us</h1>
         <section class="text-black mb-6">
             <p class="mb-4">
                 Planner App is designed to help you manage your tasks, organize your schedule, and stay on top of your
