--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -43,7 +43,7 @@
 <!--        </table>-->
 <!--    </div>-->
 <!--</div>-->
-<div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center">
+<div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
     <h1 class="text-3xl  mb-4 text-center">All users</h1>
     <div class="overflow-x-auto w-full max-w-4xl">
         <table class="min-w-full bg-card rounded-lg">
@@ -112,29 +112,19 @@
                     <button class="bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">Delete</button>
                 </td>
             </tr>
-            <tr>
-                <td class="px-4 py-2 text-center">JaneSmith</td>
-                <td class="px-4 py-2 text-center">Jane Smith</td>
-                <td class="px-4 py-2 text-center">jane.smith@example.com</td>
-                <td class="px-4 py-2 text-center">User</td>
-                <td class="px-4 py-2 text-center">
-                    <button class="bg-accent text-accent-foreground px-2 py-1 rounded-lg ml-2">Make Admin</button>
-                    <button class="edit-button bg-secondary text-secondary-foreground px-2 py-1 rounded-lg">Edit</button>
-                    <button class="bg-destructive text-destructive-foreground px-2 py-1 rounded-lg ml-2">Delete</button>
-                </td>
-            </tr>
             </tbody>
         </table>
     </div>
-    <div class="hidden flex flex-col justify-center gap-6 mt-4  w-3/5" id="editSection"
-         >
-        <h2 class="text-xl mb-2"
-            style="border-bottom: 2px solid black;padding-bottom: 0.5em;margin-bottom: 1em;">Edit</h2>
+    <div class="hidden flex flex-col justify-center gap-6 mt-4  w-3/5" id="editSection">
+        <h2 class="text-xl mb-2 border-solid border-b-2 border-black pb-2 rem mb-4">Edit</h2>
         <div class="flex gap-8">
             <div class="w-full md:w-1/2">
                 <label class="block mb-3" for="username">Username</label>
                 <input id="username" type="text" class="w-full  text-black border border-primary rounded-md px-3 py-2 mb-2"
                        placeholder="Username"/>
+                <div class="bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                    <p>Username length must be between 2 and 15 symbols!</p>
+                </div>
             </div>
             <div class="w-full md:w-1/2">
                 <label class="block mb-3" for="fullName">Full Name</label>
@@ -167,13 +157,3 @@
 </body>
 <script th:src="@{/js/edit-user.js}"></script>
 </html>
-<!--h2-->
-<!--border-bottom: 2px solid black;-->
-<!--padding-bottom: 0.5em;-->
-<!--margin-bottom: 1em;-->
-
-<!--edit section-->
-<!--display: flex;-->
-<!--flex-direction: column;-->
-<!--justify-content: center;-->
-<!--gap: 1em;-->
