--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -53,16 +53,16 @@
     </div>
 </div>
     <div id="charts" class="flex  ">
-        <div id="donutchart" class="chart"></div>
-        <div id="donutchart2" class="chart"></div>
+        <div id="users-roles-donutchart" class="chart"></div>
+        <div id="tasks-types-donutchart" class="chart"></div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script th:src="@{/js/user-donut-chart.js}"></script>
+<script th:src="@{/js/statistics-pie-chart.js}"></script>
 <script>
     $(window).resize(function(){
-        drawChart();
+        drawTaksChart();
     });
 </script>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
