--- a/src/main/resources/templates/edit-task.html
+++ b/src/main/resources/templates/edit-task.html
@@ -61,6 +61,6 @@ Task notes example for editing.</textarea
     </form>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
-<script th:src="@{/js/today-date.js}"></script>
+<script th:src="@{/js/dates.js}"></script>
 </body>
 </html>
