--- a/src/main/resources/templates/add-task.html
+++ b/src/main/resources/templates/add-task.html
@@ -93,6 +93,6 @@
     </form>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
-<script th:src="@{/js/today-date.js}"></script>
+<script th:src="@{/js/dates.js}"></script>
 </body>
 </html>
