Add edit styles and add age to register form

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,7 +17,7 @@
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 0 0% 98%;
         --border: 240 5.9% 90%;
-        --input: 240 5.9% 90%;
+        --input: 222.2,47.4%,11.2%;
         --ring: 240 5.9% 10%;
         --radius: 0.5rem;
     }
