--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
-<body>
-<div class="bg-blue-500 text-primary-foreground min-h-screen flex items-center justify-center">
+<body class="bg-blue-500 mb-6 mt-6">
+<div class="text-primary-foreground min-h-screen flex items-center justify-center">
     <div class="bg-card w-full max-w-md p-8 rounded-lg shadow-lg">
         <h2 class="text-black text-2xl font-bold mb-6">Register</h2>
-        <form>
+        <form >
             <div class="mb-4">
                 <label for="username" class="block text-black text-sm font-medium mb-2">Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter your username" class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring focus:ring-primary" />
@@ -17,10 +17,10 @@
                 <label for="email" class="block text-black text-sm font-medium mb-2">Email</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring focus:ring-primary" />
             </div>
-<!--            <div class="mb-4">-->
-<!--                <label for="age" class="block text-black text-sm font-medium mb-2">Age</label>-->
-<!--                <input type="number" id="age" name="age" placeholder="Enter your age" class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring focus:ring-primary" />-->
-<!--            </div>-->
+            <div class="mb-4">
+                <label for="age" class="block text-black text-sm font-medium mb-2">Age</label>
+                <input type="number" id="age" name="age" placeholder="Enter your age" class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring focus:ring-primary" />
+            </div>
             <div class="mb-4">
                 <label for="password" class="block text-black text-sm font-medium mb-2">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" class="w-full px-3 py-2 placeholder-input text-input border rounded-lg focus:outline-none focus:ring focus:ring-primary" />
