--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,6 +18,8 @@
         --destructive-foreground: 0 0% 98%;
         --border: 240 5.9% 90%;
         --input: 222.2,47.4%,11.2%;
+        --sort: 240 5.9% 90%;
+        /*240 5.9% 90%*/
         --ring: 240 5.9% 10%;
         --radius: 0.5rem;
     }
