Implement user authentication

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
                 <div class="flex items-center space-x-2">
                     <label for="today-sort-by" class="text-zinc-600">Sort by:</label>
                     <select id="today-sort-by"
-                            class="bg-sort text-zinc-600 border border-sort rounded-md px-2 py-1 pr-8">
+                            class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
                         <option value="priority">Priority</option>
                         <option value="priority">Priority DESC</option>
                         <option value="category">Category</option>
@@ -127,7 +127,7 @@
                     </div>
                     <label for="f-p-sort-by" class="text-zinc-600">Sort by:</label>
                     <select id="f-p-sort-by"
-                            class="bg-sort text-zinc-600 border border-sort rounded-md px-2 py-1 pr-8">
+                            class="bg-input text-zinc-600 border border-input rounded-md px-2 py-1 pr-8">
                         <option value="due_date">Due Date</option>
                         <option value="priority">Priority</option>
                         <option value="category">Category</option>
