--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
     <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
-        <form>
+        <form th:method="post" th:action="@{/users/login}">
             <div class="mb-4">
                 <label for="username" class="block text-sm font-medium text-primary">Username</label>
                 <input
@@ -12,7 +12,7 @@
                         id="username"
                         name="username"
                         placeholder="Enter your username"
-                        class="w-full px-3 py-2 mt-1 text-primary bg-input border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
+                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
             <div class="mb-6">
@@ -22,7 +22,7 @@
                         id="password"
                         name="password"
                         placeholder="Enter your password"
-                        class="w-full px-3 py-2 mt-1 text-primary bg-input border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
+                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
             <button type="submit" class="w-full bg-primary text-primary-foreground p-3 rounded-md hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">Login</button>
