--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,8 +25,14 @@
                         class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
                 />
             </div>
-            <button type="submit" class="w-full bg-primary text-primary-foreground p-3 rounded-md hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">Login</button>
+            <button type="submit"
+                    class="w-full bg-primary text-primary-foreground p-3 rounded-md hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
+                Login
+            </button>
         </form>
+        <div th:if="${hasError}" class="text-center text-lg text-destructive ">
+            <p>Incorrect username or password!</p>
+        </div>
     </div>
 </div>
 
