--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
                        type="text" id="username" name="username" placeholder="Enter your username"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{username}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Username length must be between 5 and 15 symbols!</p>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                        type="text" id="fullName" name="fullName" placeholder="Enter your full name"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{fullName}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Full name length must be between 5 and 20 symbols!</p>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                        type="email" id="email" name="email" placeholder="Enter your email"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{email}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Enter valid email</p>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                        type="number" id="age" name="age" placeholder="Enter your age"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{age}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Age must be positive</p>
                 </div>
             </div>
@@ -60,11 +60,11 @@
                        placeholder="Enter your password"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{password}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
                 <div th:errors="global"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
             </div>
@@ -77,11 +77,11 @@
                        placeholder="Confirm your password"
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{confirmPassword}"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
                 <div th:errors="global"
-                     class="text-sm bg-destructive text-destructive-foreground p-1 rounded-md mx-auto">
+                     class="text-sm text-destructive">
                     <p>Password length must be between 2 and 15 symbols!</p>
                 </div>
             </div>
