--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -19,26 +19,38 @@
 <div class="bg-background text-primary-foreground min-h-screen flex flex-col items-center justify-center">
     <h1 class="text-5xl mb-8 text-black">Contact Us</h1>
     <div class="bg-card w-9/12 p-8 rounded-lg shadow-lg mb-8">
-        <form action="#" method="POST" class="space-y-6">
-            <div class="grid grid-cols-2 gap-6">
+        <form th:action="@{/contacts}" th:method="post" th:object="${contactData}" class="space-y-6">
+            <div class="grid grid-cols-2 gap-6 text-black">
                 <div>
-                    <label for="title" class="block text-lg font-medium text-black">Title</label>
-                    <input type="text" id="title" name="title" placeholder="Your Title"
+                    <label th:for="title" class="block text-lg font-medium text-black">Title</label>
+                    <input th:field="*{title}" type="text" id="title" name="title" placeholder="Your Title"
                            class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                            required/>
+                    <div th:errors="*{title}"
+                         class="text-sm text-destructive">
+                        <p>Password length must be between 2 and 15 symbols!</p>
+                    </div>
                 </div>
                 <div>
-                    <label for="email" class="block text-lg font-medium text-black">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Your Email"
+                    <label th:for="email" class="block text-lg font-medium text-black">Email</label>
+                    <input th:field="*{email}" type="email" id="email" name="email" placeholder="Your Email"
                            class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                            required/>
+                    <div th:errors="*{email}"
+                         class="text-sm text-destructive">
+                        <p>Password length must be between 2 and 15 symbols!</p>
+                    </div>
                 </div>
             </div>
             <div>
-                <label for="message" class="block text-lg font-medium text-black">Message</label>
+                <label th:field="*{message}" th:for="message" class="block text-lg font-medium text-black">Message</label>
                 <textarea id="message" name="message" rows="6" placeholder="Your Message"
-                          class="w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
+                          class=" text-black w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                           required></textarea>
+                <div th:errors="*{message}"
+                     class="text-sm text-destructive">
+                    <p>Password length must be between 2 and 15 symbols!</p>
+                </div>
             </div>
             <div class="flex justify-start">
                 <button type="submit"
