--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
+<section th:if="${mailSent}" class="bg-green-400 p-4 border-green-900  border-t-8 box-border">
+    <p class="text-lg">Successfully sent email</p>
+</section>
 <div class="bg-background text-primary-foreground min-h-screen flex flex-col items-center justify-center">
     <main class="container mx-auto mt-8 grid grid-cols-1 gap-8 md:grid-cols-2">
         <section id="today-tasks-section" class="bg-card rounded-lg p-6 shadow-md overflow-y-auto max-h-96">
