--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,9 @@
 <head th:replace="~{/fragments/head::head}"></head>
 <body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
+<section class="bg-green-400 p-4 border-green-900  border-t-8 box-border">
+    <p class="text-lg">Successfully sent email</p>
+</section>
 <div class="text-primary-foreground min-h-screen flex flex-col items-center justify-center">
     <div class="text-center max-w-4xl mx-auto p-8">
         <h1 class="text-6xl text-primary font-bold mb-8">Welcome to TaskMaster</h1>
