--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -43,8 +43,8 @@
                 </div>
             </div>
             <div>
-                <label th:field="*{message}" th:for="message" class="block text-lg font-medium text-black">Message</label>
-                <textarea id="message" name="message" rows="6" placeholder="Your Message"
+                <label  th:for="message" class="block text-lg font-medium text-black">Message</label>
+                <textarea th:field="*{message}" id="message" name="message" rows="6" placeholder="Your Message"
                           class=" text-black w-full px-4 py-3 mt-2 rounded-md border focus:outline-none focus:ring focus:ring-primary"
                           required></textarea>
                 <div th:errors="*{message}"
@@ -61,7 +61,12 @@
         </form>
     </div>
 </div>
+<div th:if="${scrollToFrom}" id="scroll"></div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
 <script th:src="@{/js/map.js}"></script>
+<script>
+    document.getElementById("scroll")
+        .scrollIntoView({block: "end", behavior: "smooth"});
+</script>
 </html>
