--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<nav th:fragment="nav" class="flex flex-col md:flex-row items-center justify-between px-4 py-4 bg-primary text-primary-foreground">
-    <div title="Logo" class="order-1 text-xl font-bold">Planner App</div>
+<nav th:fragment="nav"
+     class="flex flex-col md:flex-row items-center justify-between px-4 py-4 bg-primary text-primary-foreground">
+    <a th:href="@{/}" title="Logo" class="order-1 text-xl font-bold">TaskMaster</a>
     <input type="checkbox" id="menu-toggle" class="hidden">
     <label for="menu-toggle" class="cursor-pointer md:hidden block order-2 md:order-1">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -15,15 +18,19 @@
     </label>
     <div id="menu-links"
          class="hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
-        <a href="#" class="text-base font-medium hover:text-primary-700">About</a>
-        <a href="#" class="text-base font-medium hover:text-primary-700">Contacts</a>
-        <a href="#" class="text-base font-medium hover:text-primary-700">Add Task</a>
-        <a href="#" class="text-base font-medium hover:text-primary-700">My Tasks</a>
-        <a href="#" class="text-base font-medium hover:text-primary-700">Open Tasks</a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}" class="text-base font-medium hover:text-primary-700">Add Task</a>
+        <a th:href="@{/tasks/open-tasks}" class="text-base font-medium hover:text-primary-700">Open Tasks</a>
+        <a th:href="@{/about}" class="text-base font-medium hover:text-primary-700">About</a>
+        <a th:href="@{/contacts}" class="text-base font-medium hover:text-primary-700">Contacts</a>
     </div>
     <div class="flex items-center space-x-4 order-2 md:order-3">
-        <button class="text-base font-medium text-primary-foreground hover:text-primary-700">Register</button>
-        <button class="text-base font-medium text-primary-foreground hover:text-primary-700">Login</button>
+        <a sec:authorize="isAnonymous()" th:href="@{/users/register}" class="text-base font-medium text-primary-foreground hover:text-primary-700">Register</a>
+        <a sec:authorize="isAnonymous()" th:href="@{/users/login}"
+           class="text-base font-medium text-primary-foreground hover:text-primary-700">Login</a>
+        <form sec:authorize="isAuthenticated()"  th:action="@{/logout}" th:method="post">
+            <button type="submit" class="text-base font-medium text-primary-foreground hover:text-primary-700">Logout
+            </button>
+        </form>
     </div>
 </nav>
 </body>
