--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/nav.css}">
 </head>
 <body>
 <nav th:fragment="nav"
@@ -16,18 +17,27 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
     </label>
-    <div id="menu-links"
-         class="hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
-        <a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}" class="text-base font-medium hover:text-primary-700">Add Task</a>
-        <a th:href="@{/tasks/open-tasks}" class="text-base font-medium hover:text-primary-700">Open Tasks</a>
-        <a th:href="@{/about}" class="text-base font-medium hover:text-primary-700">About</a>
-        <a th:href="@{/contacts}" class="text-base font-medium hover:text-primary-700">Contacts</a>
-    </div>
+    <ul id="menu-links"
+        class=" hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
+        <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
+               class="text-base font-medium hover:text-primary-700">Add Task</a></li>
+        <li><a th:href="@{/tasks/open-tasks}" class="text-base font-medium hover:text-primary-700">Open Tasks</a></li>
+        <li><a th:href="@{/about}" class="text-base font-medium hover:text-primary-700">About</a></li>
+        <li><a th:href="@{/contacts}" class="text-base font-medium hover:text-primary-700">Contacts</a></li>
+        <li sec:authorize="hasRole('ROLE_USER')" class="group text-base font-medium relative block hover:ul block">
+            Admin
+            <ul class=" group-hover:block hidden absolute bg-primary w-22 rounded-lg top-full left-[-38%]">
+                <li class="px-4 py-2"><a th:href="@{/tasks/open-tasks}">All users</a></li>
+                <li class="px-4 pb-2"><a th:href="@{/tasks/open-tasks}">Statistics</a></li>
+            </ul>
+        </li>
+    </ul>
     <div class="flex items-center space-x-4 order-2 md:order-3">
-        <a sec:authorize="isAnonymous()" th:href="@{/users/register}" class="text-base font-medium text-primary-foreground hover:text-primary-700">Register</a>
+        <a sec:authorize="isAnonymous()" th:href="@{/users/register}"
+           class="text-base font-medium text-primary-foreground hover:text-primary-700">Register</a>
         <a sec:authorize="isAnonymous()" th:href="@{/users/login}"
            class="text-base font-medium text-primary-foreground hover:text-primary-700">Login</a>
-        <form sec:authorize="isAuthenticated()"  th:action="@{/logout}" th:method="post">
+        <form sec:authorize="isAuthenticated()" th:action="@{/logout}" th:method="post">
             <button type="submit" class="text-base font-medium text-primary-foreground hover:text-primary-700">Logout
             </button>
         </form>
