Implement add task functionality

--- a/taskmaster/src/main/resources/templates/fragments/head.html
+++ b/taskmaster/src/main/resources/templates/fragments/head.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planner App</title>
+    <title>TaskMaster</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <script src="https://unpkg.com/unlazy@0.11.3/dist/unlazy.with-hashing.iife.js" defer></script>
     <script th:src="@{/js/tailwind-config.js}"></script>
