Edit footer and remove unused imports

--- a/taskmaster/src/main/resources/templates/fragments/footer.html
+++ b/taskmaster/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <footer th:fragment="footer" class="text-center py-4 bg-primary">
-    <p class="text-primary-foreground">&copy; 2023 Planner App. All rights reserved.</p>
+    <p class="text-primary-foreground">&copy; 2023 Task master. All rights reserved.</p>
 </footer>
 </body>
 </html>
