--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -21,7 +21,9 @@
         class=" hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
         <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
                class="text-base font-medium hover:text-primary-700">Add Task</a></li>
-        <li><a th:href="@{/tasks/open-tasks}" class="text-base font-medium hover:text-primary-700">Open Tasks</a></li>
+        <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
+               class="text-base font-medium hover:text-primary-700">Ask Question</a></li>
+        <li><a th:href="@{/questions}" class="text-base font-medium hover:text-primary-700">Questions</a></li>
         <li><a th:href="@{/about}" class="text-base font-medium hover:text-primary-700">About</a></li>
         <li><a th:href="@{/contacts}" class="text-base font-medium hover:text-primary-700">Contacts</a></li>
         <li sec:authorize="hasRole('ROLE_USER')" class="group text-base font-medium relative block hover:ul block">
